# nerfthis-tools-rs

./: Cargo.toml  Dockerfile  Procfile  README.md  Rocket.toml
src/: api.rs  ip.rs  main.rs
templates/: _head.html.hbs  _layout.html.hbs  _nav.html.hbs  index.html.hbs  ip.html.hbs
