[package]
name = "nerfthis-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.152"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
mockito = "0.31.1"
reqwest-middleware = "0.2.0"
cached = "0.42.0"
anyhow = "1.0.68"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]
